@@ -68,6 +68,8 @@ special remote that claims it. (Usually the web special remote.)
 
 [[git-annex-unregisterurl]](1)
 
+[[git-annex-reregisterurl]](1)
+
 # AUTHOR
 
 Joey Hess <id@joeyh.name>
