@@ -5,6 +5,8 @@ git-annex (10.20240228) UNRELEASED; urgency=medium
     annexed files be verified with a checksum that is calculated
     on a later download from the web. This will become the default later.
   * Added dependency on unbounded-delays.
+  * reregisterurl: New command that can change an url from being
+    used by a special remote to being used by the web remote.
 
  -- Joey Hess <id@joeyh.name>  Tue, 27 Feb 2024 13:07:10 -0400
 
